feat: a somewhat working version

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     // Environment setup & latest features
     "lib": [ "ESNext" ],
-    "target": "ESNext",
+    "target": "es2020",
     "module": "Preserve",
     "moduleDetection": "force",
     "allowJs": true,
@@ -24,5 +24,8 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false
-  }
+  },
+  "exclude": [
+    "dist"
+  ]
 }
