--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
   "name": "@potonz/shortlinks-manage-cf-d1",
+  "description": "Manage short links in Cloudflare D1",
+  "author": {
+    "name": "Thomas Nguyen",
+    "email": "tom@tomng.dev"
+  },
+  "version": "0.0.1",
   "module": "src/index.ts",
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "bundle": "bun build src/index.ts --outdir dist --sourcemap --target node"
+    "bundle": "bun run build.ts",
+    "lint": "eslint .",
+    "test": "bun test",
+    "cf-typegen": "wrangler types src/worker-configuration.d.ts"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
     "@stylistic/eslint-plugin": "^5.6.1",
     "@types/bun": "latest",
+    "dts-bundle-generator": "^9.5.1",
     "eslint-plugin-import-x": "^4.16.1",
     "globals": "^16.5.0",
+    "miniflare": "^4.20251217.0",
     "typescript-eslint": "^8.50.1",
     "wrangler": "^4.54.0"
   },
