--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
       "types": "./dist/index.d.ts"
     }
   },
-  "files": [ "dist" ]
+  "files": [ "dist" ],
+  "publishConfig": {
+    "access": "public"
+  }
 }
