--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,8 @@
     // Environment setup & latest features
     "lib": [ "ESNext" ],
     "target": "es2020",
-    "module": "Preserve",
-    "moduleDetection": "force",
-    "allowJs": true,
+    "module": "esnext",
+    "allowJs": false,
 
     // Bundler mode
     "moduleResolution": "bundler",
