--- a/package.json
+++ b/package.json
@@ -1,54 +1,35 @@
 {
-  "name": "@potonz/shortlinks-manage-cf-d1",
-  "description": "Manage short links in Cloudflare D1",
+  "name": "@potonz/shortlinks-manager-monorepo",
   "author": {
     "name": "Thomas Nguyen",
     "email": "tom@tomng.dev"
   },
-  "homepage": "https://github.com/potonz/shortlinks-manage-cf-d1",
-  "repository": {
-    "url": "https://github.com/potonz/shortlinks-manage-cf-d1.git",
-    "type": "git"
-  },
-  "version": "0.0.4",
   "type": "module",
   "license": "MIT",
   "scripts": {
     "bundle": "bun run build.ts",
     "lint": "eslint .",
-    "test": "bun test",
-    "cf-typegen": "wrangler types src/worker-configuration.d.ts"
+    "lint:fix": "eslint --fix ."
+  },
+  "workspaces": {
+    "packages": ["packages/*"],
+    "catalog": {
+      "date-fns": "^4.1.0",
+      "typescript": "^5.9.3"
+    }
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
     "@stylistic/eslint-plugin": "^5.6.1",
     "@types/bun": "latest",
-    "date-fns": "^4.1.0",
     "dts-bundle-generator": "^9.5.1",
+    "eslint": "^9.39.2",
     "eslint-plugin-import-x": "^4.16.1",
     "globals": "^16.5.0",
-    "miniflare": "^4.20251217.0",
-    "nanospinner": "^1.2.2",
-    "typescript-eslint": "^8.50.1",
-    "wrangler": "^4.54.0"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.50.1"
   },
   "peerDependencies": {
-    "typescript": "^5"
-  },
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
-    }
-  },
-  "files": [
-    "dist"
-  ],
-  "publishConfig": {
-    "access": "public"
+    "bun": "latest"
   }
 }
