--- a/tsconfig.bundle.json
+++ b/tsconfig.bundle.json
@@ -4,7 +4,6 @@
     "noEmit": false,
     "emitDeclarationOnly": true,
     "declaration": true,
-    "declarationDir": "dist",
-  },
-  "include": [ "src/*.ts" ]
+    "declarationDir": "dist"
+  }
 }
