--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,11 +10,15 @@ jobs:
   test:
     uses: ./.github/workflows/test.yml
 
+  lint:
+    uses: ./.github/workflows/lint.yml
+
   publish:
     runs-on: ubuntu-latest
 
     needs:
       - test
+      - lint
 
     permissions:
       id-token: write
@@ -27,6 +31,7 @@ jobs:
         with:
           bun-version: latest
 
+      # Needed to publish package
       - uses: actions/setup-node@v4
         with:
           node-version: "24"
@@ -36,7 +41,7 @@ jobs:
         run: bun install --frozen-lockfile
 
       - name: Bundle
-        run: bun run bundle && mv dist/package.json package.json
+        run: bun run bundle
 
       - name: Publish
-        run: npm publish
+        run: bun run publish
