--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
   },
   "type": "module",
   "license": "MIT",
+  "version": "0.1.0",
   "scripts": {
-    "bundle": "bun run build.ts",
+    "bundle": "bun run ./scripts/build.ts",
+    "release": "bun run ./scripts/release.js",
+    "publish": "bun run ./scripts/publish.ts",
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
   },
   "workspaces": {
     "packages": ["packages/*"],
     "catalog": {
-      "date-fns": "^4.1.0",
-      "typescript": "^5.9.3"
+      "date-fns": "^4.1.0"
     }
   },
   "devDependencies": {
@@ -26,6 +28,7 @@
     "eslint": "^9.39.2",
     "eslint-plugin-import-x": "^4.16.1",
     "globals": "^16.5.0",
+    "nanospinner": "^1.2.2",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.50.1"
   },
