--- a/packages/shortlinks-manager-cloudflare-d1/package.json
+++ b/packages/shortlinks-manager-cloudflare-d1/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "scripts": {
     "test": "bun test",
+    "pack": "bun pm pack --destination ../../tarballs",
     "cf-typegen": "wrangler types src/worker-configuration.d.ts"
   },
   "dependencies": {
