--- a/packages/shortlinks-manager/package.json
+++ b/packages/shortlinks-manager/package.json
@@ -14,7 +14,8 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "test": "bun test"
+    "test": "bun test",
+    "pack": "bun pm pack --destination ../../tarballs"
   },
   "devDependencies": {
     "date-fns": "catalog:"
