--- a/packages/shortlinks-manager/package.json
+++ b/packages/shortlinks-manager/package.json
@@ -14,8 +14,7 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "test": "bun test",
-    "pack": "bun pm pack --destination ../../tarballs"
+    "test": "bun test"
   },
   "devDependencies": {
     "date-fns": "catalog:"
